Don't use empty provider list